delete ignore files